--- a/public/code/闭包作用域.md
+++ b/public/code/闭包作用域.md
@@ -1,7 +1,8 @@
 # 条件竞争
 
-这个[博客](<https://maxrozen.com/race-conditions-fetching-data-react-with-useeffect>)
-为什么如下这段代码会解决race condition问题
+看这个[博客](<https://maxrozen.com/race-conditions-fetching-data-react-with-useeffect>)
+
+为什么如下这段代码会解决race condition问题？
 
 ```javascript
 useEffect(() => {
@@ -29,3 +30,5 @@ useEffect(() => {
 因为active是一个闭包变量。
 
 当props.id改变时，组件更新，重新执行一遍useEffect里的函数，生成新的闭包作用域，且互不干扰。if (active)虽是一个异步操作，但active总能对应自己的active，不会出现混乱。
+
+看react文档的[相关内容](https://react.dev/learn/you-might-not-need-an-effect#fetching-data)
