--- a/public/php/$.md
+++ b/public/php/$.md
@@ -4,14 +4,14 @@
 
 官网说了，引用不是C里的指针，不是地址也不能执行计算。引用必然不是严格意义上的指针，C的指针是一种数据类型，而php的引用只是一个概念，是一种实现，具体是如何实现的我们不需要知道。但脑子里必须有一个思想模型来解释引用，否则满屏的$太让人头疼了。官网说了，可以把引用看成别名，可以用计算机系统里的文件名文件路径作为类比，这当然可以，下面是我自己的理解。
 
-$foo = 1，这个赋值表达式做了什么。首先计算出1的值，然后把这个值赋值给变量$foo。那$foo是什么，是命名空间里的一个键（命名空间是一个符号表，符号表是算法里的概念，类似于映射字典等，可以用多种方式实现符号表，比如二叉树，总之增查改删符号表的操作都很快。）当我们需要用$foo的值时，php给我们这个变量的值，这个值存储在存储空间里，这个存储空间的大小要足够大，因为随时会存储不同类型的值，在php里就是标量值，比如int和float，也会存储指针类型，虽然指针类型不是php里的标量，但底层肯定使用了，毕竟php是用C实现的。
+$foo = 1，这个赋值表达式做了什么。首先计算出1的值，然后把这个值赋值给变量$foo。那$foo是什么，是命名空间里的一个键（命名空间是一个符号表，符号表是算法里的概念，类似于映射字典等，可以用多种方式实现符号表，比如二叉树，总之增查改删符号表的操作都很快。）当我们需要用$foo的值时，php给我们这个变量的值，这个值存储在存储空间里，这个存储空间的大小要足够大，因为随时会存储不同类型的标量，比如int和float，也会存储指针类型，毕竟php是用C实现的。
 
-但是$foo不只是一个值，它还有一个地址，或者说有一个指针，这个指针指向$foo的值的存储单元，即保存着该存储单元的地址，而这个指针就是foo。没错，$foo这种写法不只是一个用来区分变量和常量的写法，它还有另外的含义：读取foo这个指针所指向的存储单元的值（类似C里的取值运算符）。所以在php里一个$foo变量对应两个存储空间：一个存储值，一个存储地址（或者叫指针、别名、引用，都无所谓）。那么与之对应的就是两种赋值方式：传值和传引用。
+但是$foo不只是一个值，它还有一个地址，或者说有一个指针，这个指针指向$foo的值所在的存储单元，即保存着该存储单元的地址，而这个指针就是foo。$foo这种写法不只是一个用来区分变量和常量的写法，它还有另外的含义：读取foo这个指针所指向的存储单元的值（类似于C里的取值运算符）。所以在php里一个$foo变量对应两个存储空间：一个存储值，一个存储地址（或者叫指针、别名、引用，都无所谓），后者指向前者。那么与之对应的就是两种赋值方式：传值和传引用。
 
-传值使用=，而传引用使用=&，这两种赋值表达式的操作数都是$foo，php里没有引用这种类型，值和引用统统用$foo表示，php根据=和=&来决定是给值还是给地址。而常数为什么不用$，因为常数只能是标量，字节固定，地址也固定，值和地址是严格一对一关系（不像变量，值和地址随时可变），所以在写法上不需要用$来做“取值操作”。而对变量来说，每次都需要$一下来获取最新值。函数名和类名也不需要$，因为值是指针，而指针是和int一样的一种基本类型。
+传值使用=，而传引用使用=&，这两种赋值表达式的操作数都是$foo，php里没有引用这种类型，值和引用统统用$foo表示，php根据=和=&来决定是给值还是给地址。而常数为什么不用$，因为常数只能是标量，字节固定，地址也固定，地址和值是严格一对一关系，所以在写法上不需要用$来做“取值操作”。而对变量来说，地址和值随时可变，需要用$一下来获取最新值。函数名和类名也不需要$，因为引用它们的值是指针，指针和int一样。
 
-其实，在赋值的时候都是拷贝，无论传值还是传引用。传值是拷贝到存储值的单元，传引用是拷贝到存储引用的单元。不过，要注意的是，如果是传引用，引用变了之后对应的值也会改变，因为值总是从引用所指向的那个存储单元读取的。
+另外，在赋值的时候都是拷贝，无论传值还是传引用。传值是拷贝到存储值的单元，传引用是拷贝到存储引用的单元。不过，要注意的是，如果是传引用，引用变了之后对应的值也会改变，因为值总是从引用所指向的那个存储单元读取的。
 
-至于$this->foo这里为什么不用$了，可以这样理解。对象是把分布在内存各处的值关联起来，肯定也是一个符号表，必然用地址作为键来遍历，上面已经说了foo就是地址，$foo才是值。$this->$foo和$($this->foo)这些表示都太繁琐，$this->foo这种表示就很简洁也好理解（可以看成是$(this->foo)）。
+至于$this->foo这里为什么不用$了，可以这样理解。对象是把分布在内存各处的值关联起来，肯定也是一个符号表，必然用地址作为键来遍历，上面已经说了foo就是地址，$foo才是值。$this->$foo和$$this->foo这些表示都太繁琐，而$this->foo这种表示就很简洁也好理解（可以看成是$(this->foo)）。
 
 总之，对于初学php的有其他语言编程经历的人来说，看着满屏的$确实会很懵。以上这些思想模型会让大脑更快更好的适应php的表达方式。
