--- a/public/javascript/闭包作用域.md
+++ b/public/javascript/闭包作用域.md
@@ -1,6 +1,6 @@
 # 条件竞争
 
-看这个[博客](<https://maxrozen.com/race-conditions-fetching-data-react-with-useeffect>)
+看这个[博客](https://maxrozen.com/race-conditions-fetching-data-react-with-useeffect)
 
 为什么如下这段代码会解决race condition问题？
 
@@ -9,14 +9,19 @@ useEffect(() => {
   let active = true;
 
   const fetchData = async () => {
-    setTimeout(async () => {
-      const response = await fetch(`https://swapi.dev/api/people/${props.id}/`);
-      const newData = await response.json();
-      if (active) {
-        setFetchedId(props.id);
-        setData(newData);
-      }
-    }, Math.round(Math.random() * 12000));
+    setTimeout(
+      async () => {
+        const response = await fetch(
+          `https://swapi.dev/api/people/${props.id}/`
+        );
+        const newData = await response.json();
+        if (active) {
+          setFetchedId(props.id);
+          setData(newData);
+        }
+      },
+      Math.round(Math.random() * 12000)
+    );
   };
 
   fetchData();
@@ -24,7 +29,6 @@ useEffect(() => {
     active = false;
   };
 }, [props.id]);
-
 ```
 
 因为active是一个闭包变量。
