--- a/public/note/关于这个应用.md
+++ b/public/note/关于这个应用.md
@@ -1,4 +1,4 @@
-# RTK Query
+# 关于这个应用的react版
 
 准备用 RTK Query 重写一下这个网站的 data fetch 逻辑，但是真的没有耐心了，这个代码我已经不想再看了，因为比较乱，时间间隔也太久。
 
@@ -7,3 +7,5 @@
 当时写这个网站时，我对 cache 还没有概念，当时只学了 RTK，没有往下看 RTK Query，因为 Redux 的文档真的是太长了。
 
 所以就不重写了，直接用 Next.js 吧。
+
+P.S. 另一个 vue 版，用自带的 pinia 轻松实现了预加载。
