--- a/public/hardware/轮回.md
+++ b/public/hardware/轮回.md
@@ -17,3 +17,5 @@
 比如，现在我看硬件的知识，我只看英文的，这个习惯是我学前端时养成的。还有我编程的技能，在学前端的时候也得到了锻炼，最起码可以写出易读易维护的代码。在上个公司，我看过纯硬件人的C语言代码，可读性真的不高，因为他们本能的觉得自己是硬件开发，编程只是硬件的辅助，就不会太在意代码的结构、命名等问题。前端开发给我的第三个优势是，物联网IOT的无缝接入，IOT本质就是传感器数据的可视化和可交互。
 
 要重新学习电子电路了，我当时觉得硬件不酷，是因为中国的应试教育，以后再说为什么。
+
+2024.9.21补，特么的，你高中物理但凡用线圈切割下磁铁让电流表指针动一下，演示个磁生电现象，我也不会觉得硬件不酷啊，中国的应试教育真特么抹灭求知欲
